--- a/mypy-report/index.html
+++ b/mypy-report/index.html
@@ -12,15 +12,15 @@
 <th class="summary">Imprecision</th>
 <th class="summary">Lines</th>
 </tr></thead>
-<tfoot><tr class="summary summary-quality-1">
+<tfoot><tr class="summary summary-quality-2">
 <th class="summary summary-filename">Total</th>
-<th class="summary summary-precision">9.38% imprecise</th>
-<th class="summary summary-lines">32 LOC</th>
+<th class="summary summary-precision">20.09% imprecise</th>
+<th class="summary summary-lines">428 LOC</th>
 </tr></tfoot>
-<tbody><tr class="summary summary-quality-1">
-<td class="summary summary-filename"><a href="html/src/app/components/dropdown.py.html">src.app.components.dropdown</a></td>
-<td class="summary summary-precision">9.38% imprecise</td>
-<td class="summary summary-lines">32 LOC</td>
+<tbody><tr class="summary summary-quality-2">
+<td class="summary summary-filename"><a href="html/src/varclus/varclus.py.html">src.varclus.varclus</a></td>
+<td class="summary summary-precision">20.09% imprecise</td>
+<td class="summary summary-lines">428 LOC</td>
 </tr></tbody>
 </table>
 </body>
